and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## Unreleased
### Added
- [LOG_FORWARDER] [REDIS] Support for queues, sets, publish and streams modes for log insertion
- [LOGOMELASTICSEARCH] Handle log insertion errors returned by elasticsearch
- [LOGOM] Add the ability to define the spooling directory for DA queues
### Changed
- [DEPENDENCIES] Upgrade djongo and code for pymongo>=4
- [FRONTEND] [GUI] Improve binding information for Filebeat, Redis and Kafka listeners
- [CRON] Update Reputation Context DBs at 6:00am instead of 2:00am
- [LOGOM] Increment checkpoint interval for DA queues, to increase performances
- [LOGOM] Code and logic factorization
- [LOGOM] Allow to deactivate limitation of the size of DA queues on disk
- [LOGOM] [ELASTICSEARCH] Limit available certificates to non-CA ones
- [API_PARSER] [CROWDSTRIKE] Allow to disable fetching of 'incident' logs
### Fixed
- [NETWORK] Correctly assign a new/changed IPv6 IP to an existing interface
- [FRONTEND] JSONField default value
- [FRONTEND] Redis settings improperly displayed
- [NETWORK] [GUI] Prevent missing interfaces in selection when refreshing interfaces on a cluster


## [2.15.5] - 2024-06-28
### Added
- [API_PARSER] [SIGNALSCIENCES_NGWAF] Add site_name key in logs
- [API_PARSER] [GATEWATCHER_ALERTS] New collector
- [API_PARSER] [CISCO_UMBRELLA] New collector
### Fixed
- [API_PARSER] [VECTRA] Correctly allow to test the Collector before saving it
- [API_PARSER] [HARFANGLAB] Increase delay to 10 minutes to be sure to get all logs
- [AUTHENTICATION] [GUI] LDAP Users can now authenticate once activated


## [2.15.4] - 2024-05-27
### Changed
- [API_PARSER] [CYBEREASON] Update malops fetching
- [DEPENDENCIES] Python dependencies upgrade
  - gunicorn 21.2.0 -> 22.0.0
- [CLUSTER] [CONFIG] Reload all Rsyslog/Filebeat Listeners when updating the Redis cluster password
### Fixed
- [FRONTEND] Missing redis fields in template infos