@@ -25,7 +25,8 @@ __doc__ = 'Cluster main models'
 
 from system.config.models import Config
 
-from toolkit.network.network import get_hostname
+from toolkit.network.network import get_hostname, is_valid_ip4, is_valid_ip6, is_valid_hostname
+from toolkit.network.route import get_route_interface
 from toolkit.mongodb.mongo_base import MongoBase
 from toolkit.redis.redis_base import RedisBase
 from toolkit.mongodb.mongo_base import parse_uristr
@@ -381,7 +382,7 @@ class Node(models.Model):
         from applications.logfwd.models import LogOM, LogOMRELP, LogOMHIREDIS, LogOMFWD, LogOMElasticSearch, LogOMMongoDB, LogOMKAFKA
         # !!! REQUIRED BY listener_set !
         from services.frontend.models import Listener
-        result = set()
+        output_ips = set()
         """ Retrieve LogForwarders used in enabled Frontends """
         """ First, retrieve LogForwarders that bind to the address of the node """
         addresses = self.addresses()
@@ -419,35 +420,61 @@ class Node(models.Model):
         for logfwd in logfwds:
             # Log Forwarder RELP
             if hasattr(logfwd, 'logomrelp'):
-                result.add(("tcp", logfwd.target, logfwd.port))  # TCP
+                output_ips.add(("tcp", logfwd.target, logfwd.port))  # TCP
 
             # Log Forwarder REDIS
             elif hasattr(logfwd, 'logomhiredis'):
-                result.add(("tcp", logfwd.target, logfwd.port))  # TCP
+                output_ips.add(("tcp", logfwd.target, logfwd.port))  # TCP
 
             # Log Forwarder Syslog
             elif hasattr(logfwd, 'logomfwd'):
-                result.add((logfwd.protocol, logfwd.target, logfwd.port))  # proto
+                output_ips.add((logfwd.protocol, logfwd.target, logfwd.port))  # proto
 
             # Log Forwarder ElasticSearch
             elif hasattr(logfwd, 'logomelasticsearch'):
                 """ For elasticsearch, we need to parse the servers """
                 for ip, port in re_findall("https?://([^:]+):(\d+)", logfwd.servers):
-                    result.add(("tcp", ip, port))
+                    output_ips.add(("tcp", ip, port))
 
             # Log Forwarder MongoDB
             elif hasattr(logfwd, 'logommongodb'):
                 """ For OMMongoDB - parse uristr """
                 for ip, port in parse_uristr(logfwd.uristr):
-                    result.add(('tcp', ip, port))
+                    output_ips.add(('tcp', ip, port))
 
             # Log Forwarder Kafka
             elif hasattr(logfwd, 'logomkafka'):
                 """ For kafka, we need to parse the brokers """
                 for ip, port in re_findall("([^:\"\']+):(\d+)", logfwd.broker):
-                    result.add(("tcp", ip, port))
+                    output_ips.add(("tcp", ip, port))
 
-        return list(result)
+        results = []
+        default_logom_nat_ipv4 = self.logom_outgoing_ip if is_valid_ip4(self.logom_outgoing_ip) else None
+        default_logom_nat_ipv6 = self.logom_outgoing_ip if is_valid_ip6(self.logom_outgoing_ip) else None
+
+        for proto, ip, port in output_ips:
+            route_ipv4 = None
+            route_ipv6 = None
+            logger.debug(f"Getting valid routes for ip/hostname {ip}")
+
+            if is_valid_ip4(ip) or is_valid_hostname(ip):
+                route_ipv4 = default_logom_nat_ipv4
+                # Get the facultative IPv4 route for IP
+                success, reply = get_route_interface(destination=ip)
+                if success:
+                    route_ipv4 = reply
+
+            if is_valid_ip6(ip) or is_valid_hostname(ip):
+                route_ipv6 = default_logom_nat_ipv6
+                # Get the facultative IPv6 route for IP
+                success, reply = get_route_interface(destination=ip, ip6=True)
+                if success:
+                    route_ipv6 = reply
+
+            results.append((proto, ip, port, route_ipv4, route_ipv6))
+            logger.debug({results[-1]})
+
+        return results
 
     @property
     def get_backends_enabled(self):
